Work on multiple icons in RepoCard